--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,10 @@
 platform = espressif32
 board = m5stick-c
 framework = arduino
-lib_deps = marvinroger/AsyncMqttClient@^0.8.2
+upload_speed = 1500000
+monitor_speed = 115200
+lib_deps = 
+	marvinroger/AsyncMqttClient@^0.8.2
+	me-no-dev/AsyncTCP@^1.1.1
+	elpinjo/Cumulocity IoT client@^0.2.0
+build_flags = -D ESP32 -D CORE_DEBUG_LEVEL=5
