Use CumulocityClient as a custom lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,5 @@ monitor_speed = 115200
 lib_deps = 
 	marvinroger/AsyncMqttClient@^0.8.2
 	me-no-dev/AsyncTCP@^1.1.1
-	elpinjo/Cumulocity IoT client@^0.2.0
+	knolleary/PubSubClient@^2.8
 build_flags = -D ESP32 -D CORE_DEBUG_LEVEL=5
