--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,6 @@ lib_deps =
 	marvinroger/AsyncMqttClient@^0.8.2
 	me-no-dev/AsyncTCP@^1.1.1
 	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.1
+	adafruit/Adafruit Unified Sensor@^1.1.4
 build_flags = -D ESP32 -D CORE_DEBUG_LEVEL=5
