Add command support using built-in LED

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,6 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	adafruit/DHT sensor library@^1.4.1
 	adafruit/Adafruit Unified Sensor@^1.1.4
-build_flags = -D ESP32 -D CORE_DEBUG_LEVEL=5
+	janelia-arduino/Vector@^1.2.0
+; build_flags = -D ESP32 -D CORE_DEBUG_LEVEL=5
+build_flags = -D ESP32
